# wickd

./: .gitignore  CMakeLists.txt  README.md  environment.yml  pyproject.toml  python-package-conda.yml  setup.py
.github/workflows/: pip.yml  python-package-conda.yml  wheels.yml
tests/orbital_space/: test_orbital_space.py
wickd/: __init__.py
wickd/api/: index_api.cc  operator_api.cc  sqoperator_api.cc  tensor_api.cc  term_api.cc
wicked/: __init__.py
wicked/algebra/: equation.cc
wicked/api/: api_wicked.cc  expression_api.cc  index_api.cc  operator_api.cc  sqoperator_api.cc  tensor_api.cc  term_api.cc  wick_theorem.cc
wicked/helpers/: helpers.h
